--- a/daniel/Task1_required_week1/style.css
+++ b/daniel/Task1_required_week1/style.css
@@ -1,3 +1,5 @@
+/*  Notice a pattern - all of the text is indicated as Helvetica, maybe the whole body element should have been set as Helvetica?  */
+
 .intro{
 font-family: Helvetica;
 font-size: 100px;
