--- a/alexander/second_task/main.css
+++ b/alexander/second_task/main.css
@@ -13,6 +13,7 @@ header{
     z-index: 1;
     background-color: black; 
     height: 69px; 
+    border-bottom: 1px solid seashell;
 }
 nav{
     position: absolute;
