Work Reviwed -> Required Actions Documented -> Refactor Pending

--- a/alexander/second_task/main.css
+++ b/alexander/second_task/main.css
@@ -13,6 +13,7 @@ header{
     z-index: 1;
     background-color: black; 
     height: 69px; 
+    /* top: 0px  UNCOMMENT ME and see the differencet with the header*/
 }
 nav{
     position: absolute;
@@ -23,6 +24,8 @@ nav > a {
 }
 main{
     /* border-top: 1px solid seashell; Read instructions!!! - As per instructions, the border should be a bottom one, therefore it should be attached the header */
+
+    /*  THIS IS STILL MISSING !!!! */
     position: relative;
     text-align: center;
     top: 69px;  
