--- a/daniel/Week2-task1/css/CATALOG_style.css
+++ b/daniel/Week2-task1/css/CATALOG_style.css
@@ -2,7 +2,7 @@
 header{
     width: 100%;
     height: 70px;
-    background-image:url("blue.jpg");
+    background-image:url("../images/blue.jpg");
     z-index: 1;
     display: flex;
     position: fixed;
@@ -18,7 +18,7 @@ a{
     text-align: center;
 }
 a:hover{
- background-image: url("yellow.jpg");
+ background-image: url("../images/yellow.jpg");
  color: black;
 }
 /*page style*/
