--- a/daniel/Week2-task1/css/ABOUTME_style.css
+++ b/daniel/Week2-task1/css/ABOUTME_style.css
@@ -1,41 +1,28 @@
-/*header & navigation style*/
-header{
-    width: 100%;
-    height: 70px;
-    background-image:url("blue.jpg");
-    z-index: 1;
-    display: flex;
-    position: fixed;
-    top: 0;
+.nav-wrapper{
+  min-width: 450px;
+  width: 100%;
 }
-a{
-    width: 300px;
-    margin: auto;
-    font-weight: bold;
-    font-size: 20px;
-    font-style: italic;
-    color: white;
-    text-align: center;
+.nav-wrapper .brand-logo img {
+height: 64px;
 }
-a:hover{
- background-image: url("yellow.jpg");
- color: black;
+main{
+  margin: auto;
+  max-width: 1920px;
+  min-width: 900px;
+}
+body{
+  font-size: 26px;
+  font-family: Arial, Helvetica, sans-serif
 }
 /*info box*/
 .wrapper {
-    margin-top: 100px;
     display: flex;  
     flex-flow: row wrap;
     font-weight: bold;
   }
-  
   .wrapper > * {
     padding: 10px;
     flex: 1 100%;
-  }
-  .main {
-    color: snow;
-    justify-content: left;
   }
   .logo{
     margin-top: 50px;
@@ -53,35 +40,5 @@ a:hover{
 .profile{
     height: 500px;
     padding-left: 150px;
-}
-/*About me text style*/
-.info{
-    color: white;
-    font-size: 24px;
-    font-family: 'Times New Roman', Times, serif;
-}
-p.titleInfo{
-    color: gold;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 30px;
-    text-align: center;
-}
-/*page style*/
-body{
-    background-color: black;
-    font-size: 32px;
-}
-main{
-    max-width: 1920px;
-    margin: auto;
-}
-/*footer style*/
-footer{
-    width: 100%;
-    margin-top: 150px;
-    font-weight: 500;
-    font-size: 22px;
-    color: white;
 }
 
