--- a/daniel/Week2-task1/css/CATALOG_style.css
+++ b/daniel/Week2-task1/css/CATALOG_style.css
@@ -1,48 +1,23 @@
-/*header & navigation style*/
-header{
-    width: 100%;
-    height: 70px;
-    background-image:url("../images/blue.jpg");
-    z-index: 1;
-    display: flex;
-    position: fixed;
-    top: 0;
+.nav-wrapper{
+  width: 100%;
 }
-a{
-    width: 300px;
-    margin: auto;
-    font-weight: bold;
-    font-size: 20px;
-    font-style: italic;
-    color: white;
-    text-align: center;
-}
-a:hover{
- background-image: url("../images/yellow.jpg");
- color: black;
-}
-/*page style*/
-body{
-    background-color: black;
-    font-size: 32px;
+.nav-wrapper .brand-logo img {
+  height: 64px;
 }
 main{
-    margin-top: 150px;
-    max-width: 1920px;
-    margin: auto;
+  margin: auto;
+  max-width: 1920px;
+  min-width: 900px;
 }
-/*footer style*/
-footer{
-    width: 100%;
-    margin-top: 150px;
-    font-weight: 500;
-    font-size: 22px;
-    color: white;
+body{
+  min-width: 450px;
+  font-size: 26px;
+  font-family: Arial, Helvetica, sans-serif
 }
 input[type=submit] {/*button*/
     background-color: red;
     color: white;
-    padding: 12px 20px;
+    padding: 6px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -92,24 +67,10 @@ input[type=submit]:hover {/*button*/
   .pic3{
       margin-left: 350px;
   }
-/*----------------------- Title's bars style -------------------------*/
-.WoW{
-    color: yellowgreen;
-    background-color:blue;
-}
-.CSGO{
-    background-color: orange;
-}
-.Dota2{
-    color: white;
-    background-color: red;
-}
-/*-------------------------------------------------------------------*/
 /*section title's style*/
 .WoW, .CSGO, .Dota2{
-    height: 50px;
-    margin: 50px;
-    width: 1500px;
-    justify-content: center;
-    font-weight: bold;
+  height: 80px;
+  margin: 50px;
+  width: 1500px;
+  justify-content: center;
 }
