--- a/daniel/Week2-task1/css/CONFIRMED_style.css
+++ b/daniel/Week2-task1/css/CONFIRMED_style.css
@@ -1,13 +1,13 @@
-body{
-    background-color: black;
-    font-size: 32px;
+main{
+  margin: auto;
+  max-width: 1920px;
+  min-width: 900px;
 }
-.container{
-    color: snow;
-    margin: auto;
-    text-align: center;
-    max-width: 1920px;
-  }
+body{
+  min-width: 450px;
+  font-size: 26px;
+  font-family: Arial, Helvetica, sans-serif
+}
   /*footer style*/
   footer{
     width: 100%;
@@ -16,20 +16,8 @@ body{
     font-size: 22px;
     color: white;
   }
-img{
-    height: 400px;
-}
-input[type=submit] {/*button*/
-  background-color: green;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  display: block;
-  margin: auto;
-}
-input[type=submit]:hover {/*button*/
-  background-color: yellowgreen;
-  color: darkblue;
-}
+  h1{
+    font-size: 30px;
+    font-weight: 900;
+    font-style: italic;
+  }
