--- a/daniel/Week2-task1/css/CONTACTME_style.css
+++ b/daniel/Week2-task1/css/CONTACTME_style.css
@@ -1,90 +1,19 @@
-/*header & navigation style*/
-header{
+.nav-wrapper{
   width: 100%;
-  height: 70px;
-  background-image:url("../images/blue.jpg");
-  z-index: 1;
-  display: flex;
-  position: fixed;
-  top: 0;
 }
-a{
-  width: 300px;
-  margin: auto;
-  font-weight: bold;
-  font-size: 20px;
-  font-style: italic;
-  color: white;
-  text-align: center;
-}
-a:hover{
- background-image: url("yellow.jpg");
- color: black;
-}
-/*Application form*/
-input[type=text], select, textarea {/*fill box*/
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-input[type=number]{/*fill box*/
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-  }
-  input[type=number]::-webkit-inner-spin-button, 
-  input[type=number]::-webkit-outer-spin-button { 
-    -webkit-appearance: none; 
-    margin: 0; 
-  }
-p{
-  margin: 15px;
-}
-input[type=submit] {/*button*/
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {/*button*/
-  background-color: #45a049;
-}
-
-.container {
-  margin-top: 100px;
-  border-radius: 5px;
-  padding: 20px;
-}
-form {
-  background-color: white;
-  padding: 20px;
-  top: 50%;
-  left: 50%;
-  text-align: center;
-  width: 500px;
-  margin: auto;
-}
-/*page style*/
-body{
-  background-color: black;
-  font-size: 32px;
+.nav-wrapper .brand-logo img {
+  height: 64px;
 }
 main{
-  max-width: 1920px;
   margin: auto;
+  max-width: 1920px;
+  min-width: 900px;
+  text-align: center;
+}
+body{
+  min-width: 450px;
+  font-size: 26px;
+  font-family: Arial, Helvetica, sans-serif
 }
 /*footer style*/
 footer{
@@ -93,4 +22,9 @@ footer{
   font-weight: 500;
   font-size: 22px;
   color: white;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
