--- a/daniel/Week2-task1/css/CONTACTME_style.css
+++ b/daniel/Week2-task1/css/CONTACTME_style.css
@@ -12,7 +12,7 @@ main{
 }
 body{
   min-width: 450px;
-  font-size: 26px;
+  font-size: 30px;
   font-family: Arial, Helvetica, sans-serif
 }
 /*footer style*/
@@ -27,4 +27,7 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
+}
+label{
+  font-weight: bold;
 }
