--- a/alexander/third_task/css/about.css
+++ b/alexander/third_task/css/about.css
@@ -1,8 +1,12 @@
 body{
     font-family: Cambria;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 main{
     text-align: center;
+    flex: 1 0 auto;
 }
 p{
     width: 100%;
