--- a/alexander/third_task/css/home.css
+++ b/alexander/third_task/css/home.css
@@ -1,9 +1,13 @@
 body{
     font-family: Cambria;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 main{
     text-align: center;
+    flex: 1 0 auto;
 }
 main > img{
     width: 100%;
