--- a/daniel/Week2-task1/css/ABOUTME_style.css
+++ b/daniel/Week2-task1/css/ABOUTME_style.css
@@ -9,12 +9,15 @@ main{
   margin: auto;
   max-width: 1920px;
   min-width: 900px;
+  margin-bottom: 250px;
 }
 body{
   font-size: 26px;
   font-family: Arial, Helvetica, sans-serif
 }
-/*info box*/
+a{
+  font-weight: bold;
+}
 .wrapper {
     display: flex;  
     flex-flow: row wrap;
@@ -36,9 +39,12 @@ body{
     .logo{ order: 1; } 
     .main{ order: 2; }
   }
-/*profile pic*/
 .profile{
     height: 500px;
     padding-left: 150px;
 }
-
+.edit{
+  font-size: 35px;
+  color: yellow;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
