--- a/daniel/Week2-task1/css/CATALOG_style.css
+++ b/daniel/Week2-task1/css/CATALOG_style.css
@@ -14,20 +14,19 @@ body{
   font-size: 26px;
   font-family: Arial, Helvetica, sans-serif
 }
-input[type=submit] {/*button*/
-    background-color: red;
-    color: white;
+a{
+  font-weight: bold;
+}
+input[type=submit] {
+    border: 1px solid black;
     padding: 6px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     display: block;
-    margin: 70px;
+    margin: 65px 0px 60px 0px;
+    font-weight: bold;
   }
-input[type=submit]:hover {/*button*/
-    background-color: #45a049;
-  }
-/*catalog list model*/
 .wrapper {
     margin-top: 100px;
     display: flex;  
@@ -67,10 +66,42 @@ input[type=submit]:hover {/*button*/
   .pic3{
       margin-left: 350px;
   }
-/*section title's style*/
 .WoW, .CSGO, .Dota2{
   height: 80px;
   margin: 50px;
   width: 1500px;
   justify-content: center;
+}
+/*-*/
+#type3{
+  border: 2px solid black;
+  color: #76ff03;
+  background-color: #283593;
+}
+#type3:hover{
+  color:#283593;
+  border: 2px solid black;
+  background-color: #76ff03;
+}
+/*-*/
+#type2{
+  border: 2px solid black;
+  color: black;
+  background-color: #ffea00;
+}
+#type2:hover{
+  border: 2px solid black;
+  color:#ffea00;
+  background-color: black;
+}
+/*-*/
+#type1{
+  border: 2px solid black;
+  color: white;
+  background-color: #b71c1c;
+}
+#type1:hover{
+  border: 2px solid black;
+  color:#b71c1c;
+  background-color: white;
 }
