--- a/daniel/Week2-task1/css/CONTACTME_style.css
+++ b/daniel/Week2-task1/css/CONTACTME_style.css
@@ -15,7 +15,9 @@ body{
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif
 }
-/*footer style*/
+a{
+  font-weight: bold;
+}
 footer{
   width: 100%;
   margin: auto;
@@ -30,4 +32,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 label{
   font-weight: bold;
+}
+form{
+  width: 400px;
+  margin: auto;
 }
