--- a/kaloyan/week2/css/home.css
+++ b/kaloyan/week2/css/home.css
@@ -1,3 +1,13 @@
+/* 
+See: https://css-tricks.com/multiple-class-id-selectors/ 
+
+Note: IDs are usually used for selections for JavaScript, class names are used for CSS. The above link
+shows how you can select an element with multiple class names.
+
+Other workaround is by using nesting. In order to understand better and faster how this would work, please remind me
+of this so I can show you.
+*/
+
 body {
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
@@ -8,6 +18,14 @@ body {
 
 h4 {
     font-weight: bold;
+}
+
+/*
+    Had to research myself, there was an issue where the menu is actually behind the menu itself so that's why it couldn't be clicked
+    It should work now.
+*/
+div.navbar-fixed {
+    z-index: 999;
 }
 
 #navbar-img {
@@ -30,9 +48,11 @@ h4 {
     opacity: 1;
 }
 
-#harada-img {
+/* Don't know why this was here...  */
+
+/* #harada-img {
     height:
-}
+} */
 
 @media screen and (max-width: 670px) {
     #header {
