--- a/alexander/week1/second_task/main.css
+++ b/alexander/week1/second_task/main.css
@@ -40,7 +40,7 @@ footer{
     left:10px;
 }
 .first-section-main-img{ 
-    background-image: url("img-mission-background.jpg");
+    background-image: url("https://drive.google.com/uc?export=view&id=SiZnyBys0nyY-aJz34HydJmUCpnCA-6w");
     height: 700px;
     width: 1200px;
     background-position: center;
@@ -77,7 +77,7 @@ margin-right:30px;
     margin-top: 10px;
 }
 .third-section-main-img{ 
-    background-image: url("img-locations-background.jpg");
+    background-image: url("https://drive.google.com/uc?export=view&id=1YDJZd16wVH33BTTvnlAOtHfdZD4E5Xj8");
     height: 500px;
     width: 1200px;
     margin:auto;
