Removed the images from first task and moved them to the cloud

--- a/daniel/week1/task1/style.css
+++ b/daniel/week1/task1/style.css
@@ -6,7 +6,7 @@ font-size: 100px;
 font-weight: bold;
 color: khaki;
 text-align: center;
-background-image: url(pattern.jpeg);
+background-image: url("https://drive.google.com/uc?export=view&id=1eQ11D-FYo97QrqkW6lKqWSFdgAsn7ANs");
 }
 h3{
     font-family: Helvetica;
